fix: add z-index to navigation on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -385,8 +385,8 @@ font-family: 'Fraunces', serif;*/
         border-radius: 10px;
         text-align: center;
         transition: all 0.3s;
-        box-shadow:
-            0 10px 27px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+        z-index: 10;
     }
 
     .navigation__items.active {
@@ -463,7 +463,6 @@ font-family: 'Fraunces', serif;*/
 
     .testimonials__card-container {
         flex-direction: column;
-        /*justify-content: center;*/
         align-items: center;
     }
 
